--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+<style>
+  /* Esconde o logo "Made with Unity" */
+  #unity-logo {
+    display: none !important;
+  }
+
+  /* Esconde completamente a barra de carregamento */
+  #unity-loading-bar {
+    display: none !important;
+  }
+
+  
+</style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | TESTE_01</title>
